--- a/res/layout/chat_fragment_layout.xml
+++ b/res/layout/chat_fragment_layout.xml
@@ -36,7 +36,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:imeOptions="actionSend"
-            android:inputType="textMultiLine"
+            android:inputType="text"
             android:paddingLeft="36dp" >
         </EditText>
 
